added subscribe section

--- a/index.html
+++ b/index.html
@@ -1573,7 +1573,7 @@
       </h4>
       <section class="section-4">
         <div class="row">
-          <div class="col-lg-4">
+          <div class="col-lg-4 col-md-4">
             <div class="card item item-1 border-0">
               <a href="">
                 <div class="position-relative">
@@ -1599,7 +1599,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-4">
+          <div class="col-lg-4 col-md-4">
             <div class="card item item-1 border-0">
               <a href="">
                 <div class="position-relative">
@@ -1624,7 +1624,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-4">
+          <div class="col-lg-4 col-md-4">
             <div class="card item item-1 border-0">
               <a href="">
                 <div class="position-relative">
@@ -1658,7 +1658,7 @@
           U.S
         </h4>
         <div class="row">
-          <div class="col-4">
+          <div class="col-lg-4 col-md-4">
             <div class="card item item-1 border-0">
               <div class="position-relative">
                 <a href="">
@@ -1680,7 +1680,7 @@
               </div>
             </div>
           </div>
-          <div class="col-4">
+          <div class="col-lg-4 col-md-4">
             <div class="card item item-1 border-0">
               <a href="">
                 <div class="position-relative">
@@ -1700,7 +1700,7 @@
               </div>
             </div>
           </div>
-          <div class="col-4">
+          <div class="col-lg-4 col-md-4">
             <div class="media border-bottom pb-2">
               <a href="">
                 <img
@@ -1932,7 +1932,7 @@
         </h4>
         <div class="row">
           <div class="col-4">
-            <div class="card item">
+            <div class="card item border-0">
               <img
                 src="https://d.newsweek.com/en/full/1580432/brown-dwarf-magnetic-field.webp?w=397&h=265&f=374d36caea7566ec1c44dc9debedb5d3"
                 alt=""
@@ -1949,7 +1949,7 @@
             </div>
           </div>
           <div class="col-4">
-            <div class="card item">
+            <div class="card item border-0">
               <img
                 src="https://d.newsweek.com/en/full/1580493/coronavirus.webp?w=397&h=265&f=e58a91c1aa32fc8bd643cd39f2d0746a"
                 alt=""
@@ -2009,6 +2009,252 @@
                     Naked Eye Now
                   </h5></a
                 >
+              </div>
+            </div>
+          </div>
+        </div>
+        <h4
+          class="border-top text-red last-section pt-3 d-flex justify-content-start mt-5 mb-3 pb-2 font-weight-bold middle-page-separator"
+        >
+          Culture
+        </h4>
+        <div class="row">
+          <div class="col-4">
+            <div class="card border-0 item">
+              <img
+                src="https://d.newsweek.com/en/full/1580562/greys-anatomy-doctors-race-save-richard-webber-season-16-finale.webp?w=397&h=265&f=30b2e378eeb3395741358714df63ba46"
+                alt=""
+                class="card-img-top"
+              />
+              <div class="card-body">
+                <a href="#"
+                  ><h5 class="font-weight-bold text-black">
+                    'Grey's Anatomy' Doctors Race to Save Richard Webber on
+                    Season 16 Finale
+                  </h5></a
+                >
+              </div>
+            </div>
+          </div>
+          <div class="col-4">
+            <div class="card item border-0">
+              <img
+                src="https://d.newsweek.com/en/full/1580577/sunrise-behind-empire-state-building-new-york-city.webp?w=397&h=265&f=aba9dad61cbc6e82bbe36d6c0622f249"
+                alt=""
+                class="card-img-top"
+              />
+            </div>
+            <div class="card-body">
+              <a href="#"
+                ><h5 class="font-weight-bold text-black">
+                  The Relief of Uncertainty, Muses One New Yorker
+                </h5></a
+              >
+            </div>
+          </div>
+          <div class="col-4">
+            <div class="media pb-3 border-bottom">
+              <img
+                src="https://d.newsweek.com/en/full/1580553/joe-exotic.webp?w=95&h=95&f=99f7212571dd148722d6adc63f3e45b2"
+                alt=""
+                class="d-flex mr-3"
+              />
+              <div class="media-body">
+                <a href="#"
+                  ><h5 class="mt-0 font-weight-bold text-black">
+                    Joe Exotic Juror Claims 'Tiger King' Star Faked Tears During
+                    Trial
+                  </h5></a
+                >
+              </div>
+            </div>
+            <div class="media mt-3 pb-3 border-bottom">
+              <img
+                src="https://d.newsweek.com/en/full/1580527/parting-shot-uzo-aduba.webp?w=95&h=95&l=42&t=46&f=47a94ee13d32805835a1b822064a34a7"
+                alt=""
+                class="d-flex mr-3"
+              />
+              <div class="media-body">
+                <a href="#"
+                  ><h5 class="mt-0 font-weight-bold text-black">
+                    Uzo Aduba as Trailblazer Shirley Chisholm in the Hulu Series
+                    'Mrs. America'
+                  </h5></a
+                >
+              </div>
+            </div>
+            <div class="media border-0 mt-3">
+              <img
+                src="https://d.newsweek.com/en/full/1580524/american-graffiti.webp?w=95&h=95&f=ede90a01853973c928a59f2eddb9a0ed"
+                alt=""
+                class="d-flex mr-3"
+              />
+              <div class="media-body">
+                <a href="#"
+                  ><h5 class="mt-0 font-weight-bold text-black">
+                    RIP Mad Magazine's Mort Drucker: The Funniest Cartoons of
+                    His Career
+                  </h5></a
+                >
+              </div>
+            </div>
+          </div>
+        </div>
+        <h4
+          class="border-top text-red last-section pt-3 d-flex justify-content-start mt-5 mb-3 pb-2 font-weight-bold middle-page-separator"
+        >
+          Sports
+        </h4>
+        <div class="row border-bottom">
+          <div class="col-4">
+            <div class="card border-0 item">
+              <img
+                src="https://d.newsweek.com/en/full/1580362/lebron-james-nba-los-angeles-lakers.webp?w=397&h=265&f=1880f90ba2c3ffc16cad5c418c2ab226"
+                alt=""
+                class="card-img-top"
+              />
+              <div class="card-body">
+                <a href="#"
+                  ><h5 class="font-weight-bold text-black">
+                    Lebron James Says He 'May Not Have Any Closure' If NBA
+                    Season Is Canceled
+                  </h5></a
+                >
+              </div>
+            </div>
+          </div>
+          <div class="col-4">
+            <div class="card item border-0">
+              <img
+                src="https://d.newsweek.com/en/full/1580322/tom-brady-new-england-patriots.webp?w=397&h=265&f=6cc73f2b8430320113f523ea7b11c0a9"
+                alt=""
+                class="card-img-top"
+              />
+            </div>
+            <div class="card-body">
+              <a href="#"
+                ><h5 class="font-weight-bold text-black">
+                  Tom Brady 'Was the Most Unhappy QB in Football' Last Year,
+                  Says Al Michaels
+                </h5></a
+              >
+            </div>
+          </div>
+          <div class="col-4">
+            <div class="media pb-3 border-bottom">
+              <img
+                src="https://d.newsweek.com/en/full/1580306/stephen-curry-golden-state-warriors.webp?w=95&h=95&f=46dda3908b8f95c04293e5a48869b63e"
+                alt=""
+                class="d-flex mr-3"
+              />
+              <div class="media-body">
+                <a href="#"
+                  ><h5 class="mt-0 font-weight-bold text-black">
+                    Curry Cheers up Nurses in Oakland Hospital with Surprise
+                    FaceTime Call
+                  </h5></a
+                >
+              </div>
+            </div>
+            <div class="media mt-3 pb-3 border-bottom">
+              <img
+                src="https://d.newsweek.com/en/full/1580309/josh-hamilton-texas-rangers.webp?w=95&h=95&f=2c9e762ab5c87719330921eaf09843f7"
+                alt=""
+                class="d-flex mr-3"
+              />
+              <div class="media-body">
+                <a href="#"
+                  ><h5 class="mt-0 font-weight-bold text-black">
+                    Former Texas Rangers Star Josh Hamilton Indicted by Grand
+                    Jury
+                  </h5></a
+                >
+              </div>
+            </div>
+            <div class="media border-0 mt-3">
+              <img
+                src="https://www.newsweek.com/pandemic-insurance-wimbledons-2-million-gamble-paid-off-canceling-tournament-during-coronavirus-1496961"
+                alt=""
+                class="d-flex mr-3"
+              />
+              <div class="media-body">
+                <a href="#"
+                  ><h5 class="mt-0 font-weight-bold text-black">
+                    Pandemic Insurance? Wimbledon's $2 Million Gamble Paid Off
+                  </h5></a
+                >
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="section-6">
+        <div class="row">
+          <div class="col-7">
+            <h4
+              class="text-red border-0 mt-5 mb-3 pb-2 font-weight-bold suscribe-separator"
+            >
+              EDITOR'S PICK
+            </h4>
+            <div class="jumbotron">
+              <div class="j-cont d-flex">
+                <div class="imgs d-flex position-relative mr-5">
+                  <div class="img-1">
+                    <img
+                      src="https://d.newsweek.com/en/full/1576902/april-03-2020-cover.jpg?w=170&q=95&f=e7b6af0ef76e162727acd0141bfc2e8a"
+                      alt=""
+                    />
+                  </div>
+                  <div class="img-2 position-absolute">
+                    <img
+                      src="https://d.newsweek.com/en/full/1577760/cover-april-10-2020.jpg?w=170&q=95&f=a4b41b48dc29ccde5be9091db89cdf35"
+                      alt=""
+                    />
+                  </div>
+                </div>
+                <div class="right">
+                  <h5 class="font-weight-bold text-black">
+                    In-depth Stories You Don't See Elsewhere About Topics You
+                    Want to Read!
+                  </h5>
+                  <p class="mt-4">
+                    All Access + Weekly Delivery. Choose A Membership That's
+                    Perfect for You!
+                  </p>
+                  <p class="lead mt-4">
+                    <a href="" class="btn btn-primary btn-lg red" role="button"
+                      >SUBSCRIBE <i class="fas fa-chevron-right"></i
+                    ></a>
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-5">
+            <h4
+              class="text-red border-0 mt-5 mb-3 pb-2 font-weight-bold suscribe-separator"
+            >
+              EDITOR'S PICK
+            </h4>
+            <div class="jumbotron p-0 item-2">
+              <div class="j-cont h-100 d-flex">
+                <div class="imgs d-flex mr-5">
+                  <div class="img-1"></div>
+                </div>
+                <div class="right">
+                  <h5 class="font-weight-bold text-black">
+                    The Starting 5
+                  </h5>
+                  <p class="mt-4">
+                    See why nearly a quarter of a million subscribers begin
+                    their day with the Starting 5.
+                  </p>
+                  <p class="lead mt-4">
+                    <a href="" class="btn btn-primary btn-lg red" role="button"
+                      >SIGN UP <i class="fas fa-chevron-right"></i
+                    ></a>
+                  </p>
+                </div>
               </div>
             </div>
           </div>
