--- a/index.html
+++ b/index.html
@@ -733,6 +733,373 @@
               </div>
             </div>
           </div>
+          <div class="row">
+            <div class="col-9">
+              <h5 class="title-page font-weight-bold">
+                HEROES OF THE PANDEMIC
+              </h5>
+
+              <div class="card item">
+                <div class="position-relative">
+                  <a href="#">
+                    <img
+                      src="https://d.newsweek.com/en/full/1578357/restauranteur-delivers-oranges-hospital-workers-amid-coronavirus-crisis.webp?w=397&h=397&f=c821b8426a180c7ef06fe0ae3a80a48b"
+                      alt=""
+                      class="card-img-top"
+                  /></a>
+                  <div class="article-classification position-absolute">
+                    <a href="#">Pandemic Heroes</a>
+                  </div>
+                </div>
+                <div class="card-body item-body">
+                  <a href="">
+                    <p class="h6 font-weight-bold">
+                      Restauranteur Delivers Oranges to Hospital Workers Amid
+                      Coronavirus Crisis
+                    </p>
+                  </a>
+                  <p class="font-size-14">
+                    "We all have to help each other," Matthew Fermin, owner of
+                    East Harlem restaurant Santiago's Beer Garden, told
+                    Newsweek.
+                  </p>
+                </div>
+              </div>
+
+              <div class="card item">
+                <div class="position-relative">
+                  <a href="#">
+                    <img
+                      src="https://d.newsweek.com/en/full/1578426/zoe-monterola-founder-six-feet-supplies.webp?w=397&h=397&f=f7a624e81aa902878bb39d5fe83e971f"
+                      alt=""
+                      class="card-img-top"
+                  /></a>
+                  <div class="article-classification position-absolute">
+                    <a href="#">Pandemic Heroes</a>
+                  </div>
+                </div>
+                <div class="card-body item-body">
+                  <a href="">
+                    <p class="h6 font-weight-bold">
+                      Teenagers Shop for the Vulnerable During Coronavirus
+                      Emergency
+                    </p>
+                  </a>
+                  <p class="font-size-14">
+                    "I almost cried," said a user of Six Feet Supplies, a
+                    charity started by teenagers who shop for those susceptible
+                    to COVID-19.
+                  </p>
+                </div>
+              </div>
+
+              <div class="card item">
+                <div class="position-relative">
+                  <a href="#">
+                    <img
+                      src="https://d.newsweek.com/en/full/1578399/coronavirus-pandemic-heroes-food-nurses-philadelphia.webp?w=397&h=397&f=df54d52fbce46b666dc3c098564d1f08"
+                      alt=""
+                      class="card-img-top"
+                  /></a>
+                  <div class="article-classification position-absolute">
+                    <a href="#">Pandemic Heroes</a>
+                  </div>
+                </div>
+                <div class="card-body item-body">
+                  <a href="">
+                    <p class="h6 font-weight-bold">
+                      Philly DJ Rallies Friends, Strangers to Feed Nurses and
+                      Support Businesses
+                    </p>
+                  </a>
+                  <p class="font-size-14">
+                    "I want to keep it going as long as we can," Ryan O'Connell
+                    told Newsweek.
+                  </p>
+                </div>
+              </div>
+
+              <h5 class="title-page font-weight-bold">
+                CULTURE & TRAVEL
+              </h5>
+              <div class="card item">
+                <div class="position-relative">
+                  <a href="#">
+                    <img
+                      src="https://d.newsweek.com/en/full/1576981/meri-gubeladze.webp?w=397&h=397&f=aa22dc87c1eb4e3151dfd3aee18f3d91"
+                      alt=""
+                      class="card-img-top"
+                  /></a>
+                  <div class="article-classification position-absolute">
+                    <a href="#">Travel</a>
+                  </div>
+                </div>
+                <div class="card-body item-body">
+                  <a href="">
+                    <p class="h6 font-weight-bold">
+                      What the World's Chefs Are Cooking Up at Home During the
+                      Pandemic
+                    </p>
+                  </a>
+                  <p class="font-size-14">
+                    Find out what this international coterie of chefs and food
+                    writers—from Tbilisi, Georgia, to Rome to New York City—are
+                    cooking up while stuck at home, and get their tips for
+                    stocking your kitchens and pantries for optimum
+                    deliciousness.
+                  </p>
+                </div>
+              </div>
+
+              <div class="card item">
+                <div class="position-relative">
+                  <a href="#">
+                    <img
+                      src="https://d.newsweek.com/en/full/1577620/cul-uncharted-movies-banner.webp?w=397&h=397&f=7a8dc420adaf659fa4ff50e50d107096"
+                      alt=""
+                      class="card-img-top"
+                  /></a>
+                  <div class="article-classification position-absolute">
+                    <a href="#">Travel</a>
+                  </div>
+                </div>
+                <div class="card-body item-body">
+                  <a href="">
+                    <p class="h6 font-weight-bold">
+                      Take a Virtual Vacation With These Travel-Inspiring Films
+                    </p>
+                  </a>
+                  <p class="font-size-14">
+                    For now, from the safety of your couch, you can still
+                    explore the world with these wanderlust-inspiring films.
+                    From 'The Beach' to 'Into the Wild,' these movies have the
+                    power to take you away from reality for a few hours and let
+                    you dream of a post-pandemic adventure.
+                  </p>
+                </div>
+              </div>
+
+              <div class="card item">
+                <div class="position-relative">
+                  <a href="#">
+                    <img
+                      src="https://d.newsweek.com/en/full/1577190/locked-down-italy-playing-music.webp?w=397&h=397&f=fff013a398a6aa17054e4a960dd6ed06"
+                      alt=""
+                      class="card-img-top"
+                  /></a>
+                  <div class="article-classification position-absolute">
+                    <a href="#">Travel</a>
+                  </div>
+                </div>
+                <div class="card-body item-body">
+                  <a href="">
+                    <p class="h6 font-weight-bold">
+                      I'm Locked Down in Italy Playing Music—But I'm More
+                      Worried About America
+                    </p>
+                  </a>
+                  <p class="font-size-14">
+                    Two American musicians play a nightly concert on their
+                    balcony while quarantined in their newly adopted home in
+                    Italy. It's a gift for their neighbors, but they also have a
+                    strong message for Americans, too.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-9">
+              <h5 class="title-page font-weight-bold">LATEST NEWS</h5>
+              <div class="media opinion-item-3">
+                <a href="">
+                  <img
+                    src="https://d.newsweek.com/en/full/1580289/bill-oreilly.webp?w=95&h=95&f=394161c4bc70d667d2f1701a7dbcf561"
+                    alt=""
+                    class="d-flex mr-3"
+                /></a>
+                <div class="media-body">
+                  <a href="">
+                    <h5 class="mt-0 title font-weight-bold">
+                      Coronavirus Is Unlike Any War Americans Have Fought. Yet
+                      We'll Win It Too
+                    </h5></a
+                  >
+                </div>
+              </div>
+              <div class="media opinion-item-3">
+                <a href="">
+                  <img
+                    src="https://d.newsweek.com/en/full/1580299/publix-milk-chocolate-milk.webp?w=95&h=95&f=ad3cf29bc8cbd3d4c3344fe8b30fd0af"
+                    alt=""
+                    class="d-flex mr-3"
+                /></a>
+                <div class="media-body">
+                  <a href="">
+                    <h5 class="mt-0 title font-weight-bold">
+                      Florida Dairy Farmers Dump 800,000 Gallons of Excess Milk
+                    </h5></a
+                  >
+                </div>
+              </div>
+              <div class="media opinion-item-3">
+                <a href="">
+                  <img
+                    src="https://d.newsweek.com/en/full/1580293/jay-inslee.webp?w=95&h=95&f=521d157153eff695ee9be9254353cc57"
+                    alt=""
+                    class="d-flex mr-3"
+                /></a>
+                <div class="media-body">
+                  <a href="">
+                    <h5 class="mt-0 title font-weight-bold">
+                      Social Distancing May Have Helped Washington and Oregon
+                      Flatten the Curve
+                    </h5></a
+                  >
+                </div>
+              </div>
+              <div class="media opinion-item-3">
+                <a href="">
+                  <img
+                    src="https://d.newsweek.com/en/full/1580296/hit-run-stock-photo.webp?w=95&h=95&f=efea6264abe753effece9ca5faaa809a"
+                    alt=""
+                    class="d-flex mr-3"
+                /></a>
+                <div class="media-body">
+                  <a href="">
+                    <h5 class="mt-0 title font-weight-bold">
+                      Man Accused of Hit-and-Run Picked Up By Police Beaten and
+                      Tied to Pole
+                    </h5></a
+                  >
+                </div>
+              </div>
+              <div class="media opinion-item-3">
+                <a href="">
+                  <img
+                    src="https://d.newsweek.com/en/full/1580286/andrew-napolitano.webp?w=95&h=95&f=aeba95c5b34f72b024e70ad231d5c7db"
+                    alt=""
+                    class="d-flex mr-3"
+                /></a>
+                <div class="media-body">
+                  <a href="">
+                    <h5 class="mt-0 title font-weight-bold">
+                      Fox News Judge Calls Kushner's Coronavirus Surveillance
+                      Unconstitutional
+                    </h5></a
+                  >
+                </div>
+              </div>
+
+              <div class="card item item-sponsor">
+                <div class="position-relative">
+                  <a href="">
+                    <img
+                      src="https://d.newsweek.com/en/full/1575945/cybersecurity-vantage-hp-sponsor.jpg?w=500&h=333&f=ac517642217c0d9cec695be60008ce2a"
+                      alt=""
+                      class="card-img-top"
+                  /></a>
+                  <div class="article-classification position-absolute">
+                    <a href="#" class="font-weight-bold">SPONSORED INSIGHT</a>
+                  </div>
+                </div>
+                <div class="card-body item-body">
+                  <a href="">
+                    <p class="h6 font-weight-bold">
+                      Weathering the Perfect Storm
+                    </p>
+                  </a>
+                  <p class="font-size-14">
+                    COVID-19 is not our only enemy. While the world confronts a
+                    pandemic, our critical infrastructure is vulnerable to
+                    cyberattack. Read this new report on where the weak points
+                    are and how to strengthen defenses against terrorists and
+                    cyber-criminals.
+                  </p>
+                </div>
+              </div>
+              <div class="card newsletter mx-auto">
+                <div class="card-body">
+                  <h4 class="card-title d-flex">
+                    <span class="logo mr-2 align-self-end"></span> SIGN UP FOR
+                    OUR NEWSLETTER
+                  </h4>
+                  <button class="btn btn-primary btn-sm d-block">
+                    SIGN UP
+                  </button>
+                  <a href="#" class="card-link">Update your preferences »</a>
+                </div>
+              </div>
+              <div class="card item item-sponsor">
+                <div class="position-relative">
+                  <a href="">
+                    <img
+                      src="https://d.newsweek.com/en/full/1563375/delphian-school.jpg?w=500&h=333&f=c4fe893bfb5642271e1298b1bea3989b"
+                      alt=""
+                      class="card-img-top"
+                  /></a>
+                  <div class="article-classification">
+                    <a href="#" class="font-weight-bold">SPONSORED INSIGHT</a>
+                  </div>
+                </div>
+                <div class="card-body item-body">
+                  <a href="">
+                    <p class="h6 font-weight-bold">
+                      What Can A Private Education Do For Your Child?
+                    </p>
+                  </a>
+                  <p class="font-size-14">
+                    What is the single most consequential choice you make to
+                    give your child the best possible advantage in life? If you
+                    think it’s education, read on.
+                  </p>
+                </div>
+              </div>
+              <div class="card item item-sponsor">
+                <a href="">
+                  <img
+                    src="https://d.newsweek.com/en/full/1572014/worlds-best-hospitals-2020.png?w=500&h=333&f=c871e2709e79f9ba030be976797f7aa2"
+                    alt=""
+                    class="card-img-top"
+                /></a>
+                <div class="card-body item-body">
+                  <a href="">
+                    <p class="h6 font-weight-bold">
+                      World's Best Hospitals 2020
+                    </p>
+                  </a>
+                  <p class="font-size-14">
+                    Newsweek partnered with Statista Inc. to rank the leading
+                    hospitals in 21 countries
+                  </p>
+                </div>
+              </div>
+              <div class="card item item-sponsor">
+                <div class="position-relative">
+                  <a href="">
+                    <img
+                      src="https://d.newsweek.com/en/full/1579652/newsweek2-gettyimages-955959130.jpg?w=500&h=333&f=766644c7e3e0eac31542ef74e910d9fe"
+                      alt=""
+                      class="card-img-top"
+                  /></a>
+                  <div class="article-classification position-absolute">
+                    <a href="#" class="font-weight-bold">SPONSORED INSIGHT</a>
+                  </div>
+                </div>
+                <div class="card-body item-body">
+                  <a href="">
+                    <p class="h6 font-weight-bold">
+                      What Is Your Accounting And Finance Team Missing?
+                    </p>
+                  </a>
+                  <p class="font-size-14">
+                    Have you ever wanted more from your accounting and finance
+                    professionals? These three letters can help.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
         </main>
         <main class="section-1 section-1-lg">
           <div class="row">
