fixed subscribe section

--- a/index.html
+++ b/index.html
@@ -3227,41 +3227,43 @@
               >
                 SUBSCRIBE
               </h4>
-              <div class="jumbotron py-4">
-                <div class="j-cont d-flex flex-column flex-md-row">
-                  <div
-                    class="imgs d-flex position-relative mx-auto wft mr-md-5 mb-5"
-                  >
-                    <div class="img-1">
-                      <img
-                        src="https://d.newsweek.com/en/full/1576902/april-03-2020-cover.jpg?w=170&q=95&f=e7b6af0ef76e162727acd0141bfc2e8a"
-                        alt=""
-                      />
+              <div class="row bg-prim">
+                <div class="col-12 jumbotron py-4">
+                  <div class="j-cont d-flex flex-column flex-md-row">
+                    <div
+                      class="imgs d-flex position-relative mx-auto wft mr-md-5 mb-5 mb-sm-5"
+                    >
+                      <div class="img-1">
+                        <img
+                          src="https://d.newsweek.com/en/full/1576902/april-03-2020-cover.jpg?w=170&q=95&f=e7b6af0ef76e162727acd0141bfc2e8a"
+                          alt=""
+                        />
+                      </div>
+                      <div class="img-2 position-absolute">
+                        <img
+                          src="https://d.newsweek.com/en/full/1577760/cover-april-10-2020.jpg?w=170&q=95&f=a4b41b48dc29ccde5be9091db89cdf35"
+                          alt=""
+                        />
+                      </div>
                     </div>
-                    <div class="img-2 position-absolute">
-                      <img
-                        src="https://d.newsweek.com/en/full/1577760/cover-april-10-2020.jpg?w=170&q=95&f=a4b41b48dc29ccde5be9091db89cdf35"
-                        alt=""
-                      />
+                    <div class="right text-center">
+                      <h5 class="font-weight-bold text-black">
+                        In-depth Stories You Don't See Elsewhere About Topics
+                        You Want to Read!
+                      </h5>
+                      <p class="mt-4">
+                        All Access + Weekly Delivery. Choose A Membership That's
+                        Perfect for You!
+                      </p>
+                      <p class="lead mt-4">
+                        <a
+                          href=""
+                          class="btn btn-primary btn-lg red"
+                          role="button"
+                          >SUBSCRIBE <i class="fas fa-chevron-right"></i
+                        ></a>
+                      </p>
                     </div>
-                  </div>
-                  <div class="right">
-                    <h5 class="font-weight-bold text-black">
-                      In-depth Stories You Don't See Elsewhere About Topics You
-                      Want to Read!
-                    </h5>
-                    <p class="mt-4">
-                      All Access + Weekly Delivery. Choose A Membership That's
-                      Perfect for You!
-                    </p>
-                    <p class="lead mt-4">
-                      <a
-                        href=""
-                        class="btn btn-primary btn-lg red"
-                        role="button"
-                        >SUBSCRIBE <i class="fas fa-chevron-right"></i
-                      ></a>
-                    </p>
                   </div>
                 </div>
               </div>
