finished all responsive propeties. added linter

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <title>Newsweek clone</title>
   </head>
   <body>
-    <div class="container-max">
+    <div class="container-max px-md-0 px-xl-4 px-lg-0">
       <header class="header">
         <nav
           class="navbar navbar-expand-lg align-items-end top-nav fixed-top px-0 pb-0"
@@ -138,7 +138,7 @@
           </div>
         </nav>
       </header>
-      <div class="container-fluid">
+      <div class="container-fluid px-4">
         <main class="section-1-sm section-1">
           <div class="row bg-white">
             <div class="col-12 mx-auto">
@@ -3221,65 +3221,63 @@
         </section>
         <section class="section-6">
           <div class="row bg-white">
-            <div class="col-md-7 col-sm-12">
+            <div class="col-md-12 col-lg-7 col-xl-8">
               <h4
                 class="text-red border-0 mt-5 mb-3 pb-2 font-weight-bold suscribe-separator"
               >
                 SUBSCRIBE
               </h4>
-              <div class="row bg-prim">
-                <div class="col-12 jumbotron py-4">
-                  <div class="j-cont d-flex flex-column flex-md-row">
-                    <div
-                      class="imgs d-flex position-relative mx-auto wft mr-md-5 mb-5 mb-sm-5"
-                    >
-                      <div class="img-1">
-                        <img
-                          src="https://d.newsweek.com/en/full/1576902/april-03-2020-cover.jpg?w=170&q=95&f=e7b6af0ef76e162727acd0141bfc2e8a"
-                          alt=""
-                        />
-                      </div>
-                      <div class="img-2 position-absolute">
-                        <img
-                          src="https://d.newsweek.com/en/full/1577760/cover-april-10-2020.jpg?w=170&q=95&f=a4b41b48dc29ccde5be9091db89cdf35"
-                          alt=""
-                        />
-                      </div>
+              <div class="col-md-12 jumbotron h-75 pt-4 pb-0">
+                <div class="j-cont d-flex flex-column flex-md-row">
+                  <div
+                    class="imgs d-flex position-relative mx-auto wft mr-md-5 mb-5 mb-sm-5"
+                  >
+                    <div class="img-1">
+                      <img
+                        src="https://d.newsweek.com/en/full/1576902/april-03-2020-cover.jpg?w=170&q=95&f=e7b6af0ef76e162727acd0141bfc2e8a"
+                        alt=""
+                      />
                     </div>
-                    <div class="right text-center">
-                      <h5 class="font-weight-bold text-black">
-                        In-depth Stories You Don't See Elsewhere About Topics
-                        You Want to Read!
-                      </h5>
-                      <p class="mt-4">
-                        All Access + Weekly Delivery. Choose A Membership That's
-                        Perfect for You!
-                      </p>
-                      <p class="lead mt-4">
-                        <a
-                          href=""
-                          class="btn btn-primary btn-lg red"
-                          role="button"
-                          >SUBSCRIBE <i class="fas fa-chevron-right"></i
-                        ></a>
-                      </p>
+                    <div class="img-2 position-absolute">
+                      <img
+                        src="https://d.newsweek.com/en/full/1577760/cover-april-10-2020.jpg?w=170&q=95&f=a4b41b48dc29ccde5be9091db89cdf35"
+                        alt=""
+                      />
                     </div>
+                  </div>
+                  <div class="right text-center">
+                    <h5 class="font-weight-bold text-black">
+                      In-depth Stories You Don't See Elsewhere About Topics You
+                      Want to Read!
+                    </h5>
+                    <p class="mt-4">
+                      All Access + Weekly Delivery. Choose A Membership That's
+                      Perfect for You!
+                    </p>
+                    <p class="lead mt-4">
+                      <a
+                        href=""
+                        class="btn btn-primary btn-lg red"
+                        role="button"
+                        >SUBSCRIBE <i class="fas fa-chevron-right"></i
+                      ></a>
+                    </p>
                   </div>
                 </div>
               </div>
             </div>
-            <div class="col-md-5 col-sm-12">
+            <div class="col-lg-5 col-xl-4 col-md-12">
               <h4
                 class="text-red border-0 mt-5 mb-3 pb-2 font-weight-bold suscribe-separator"
               >
                 NEWSLETTER
               </h4>
-              <div class="jumbotron p-0 item-2">
+              <div class="col-12 h-75 p-0 item-2">
                 <div class="j-cont h-100 d-flex flex-column flex-md-row">
-                  <div class="imgs d-flex mr-5" id="imgs-2">
+                  <div class="imgs d-flex mr-5 w-50" id="imgs-2">
                     <div class="img-1"></div>
                   </div>
-                  <div class="right">
+                  <div class="right w-50 card-body text-center">
                     <h5 class="font-weight-bold text-black">
                       The Starting 5
                     </h5>
