changed font sizes for section 1

--- a/index.html
+++ b/index.html
@@ -1136,9 +1136,11 @@
           </div>
         </main>
         <main class="section-1 section-1-lg">
-          <div class="row">
+          <div class="row pt-3">
             <div class="col-lg-3 col-md-6 column1">
-              <h5 class="font-weight-bold title-page">FEATURED STORIES</h5>
+              <h5 class="font-weight-bold font-size-14 title-page">
+                FEATURED STORIES
+              </h5>
 
               <div class="card item item-1">
                 <div class="position-relative">
@@ -1155,7 +1157,7 @@
 
                 <div class="card-body item-body">
                   <a href="">
-                    <p class="h6 font-weight-bold">
+                    <p class="h5 font-weight-bold">
                       Over 300,000 Have Recovered From Coronavirus, Per Johns
                       Hopkins University
                     </p>
@@ -1181,7 +1183,7 @@
                 </div>
                 <div class="card-body item-body">
                   <a href="">
-                    <p class="h6 font-weight-bold">
+                    <p class="h5 font-weight-bold">
                       North Korea Could Be Using Fertilizer Plants to Make More
                       Nuclear Material
                     </p>
@@ -1208,7 +1210,7 @@
                 </div>
                 <div class="card-body item-body">
                   <a href="">
-                    <p class="h6 font-weight-bold">
+                    <p class="h5 font-weight-bold">
                       Pence and Dominic Raab Spoke After Boris Johnson
                       Hospitalized with COVID-19Pence and Dominic Raab Spoke
                       After Boris Johnson Hospitalized with COVID-19
@@ -1235,7 +1237,7 @@
                 </div>
                 <div class="card-body item-body">
                   <a href="">
-                    <p class="h6 font-weight-bold">
+                    <p class="h5 font-weight-bold">
                       Acting U.S. Navy Secretary Thomas Modly Resigns After
                       Leaked Audio
                     </p>
@@ -1262,7 +1264,7 @@
                 </div>
                 <div class="card-body item-body">
                   <a href="">
-                    <p class="h6 font-weight-bold">
+                    <p class="h5 font-weight-bold">
                       Weathering the Perfect Storm
                     </p>
                   </a>
@@ -1290,7 +1292,7 @@
                 </div>
                 <div class="card-body item-body">
                   <a href="">
-                    <p class="h6 font-weight-bold">
+                    <p class="h5 font-weight-bold">
                       Cryptocurrencies Have the Potential to Solve the
                       Bottlenecks of Our Monetary System
                     </p>
@@ -1317,7 +1319,7 @@
                 </div>
                 <div class="card-body item-body">
                   <a href="">
-                    <p class="h6 font-weight-bold">
+                    <p class="h5 font-weight-bold">
                       Who Leads the Field in Dependency Treatment in 2020?
                     </p>
                   </a>
@@ -1338,7 +1340,7 @@
                 /></a>
                 <div class="card-body item-body">
                   <a href="">
-                    <p class="h6 font-weight-bold">
+                    <p class="h5 font-weight-bold">
                       Newsweek AMPLIFY Launches Strategic Partnership Solutions
                       for Brands
                     </p>
@@ -1352,7 +1354,9 @@
               </div>
             </div>
             <div class="col-lg-6 col-md-6 column2">
-              <h5 class="title-page font-weight-bold">TOP STORY</h5>
+              <h5 class="title-page font-size-14 font-weight-bold">
+                TOP STORY
+              </h5>
               <div class="card item sm-item-1">
                 <div class="position-relative">
                   <a href="#">
@@ -1367,7 +1371,7 @@
                 </div>
                 <div class="card-body item-body">
                   <a href="">
-                    <p class="h6 font-weight-bold">
+                    <p class="h5 font-weight-bold">
                       North Korea Could Be Using Fertilizer Plants to Make More
                       Nuclear Material
                     </p>
@@ -1380,7 +1384,7 @@
                   </p>
                 </div>
               </div>
-              <h5 class="title-page font-weight-bold">
+              <h5 class="title-page font-size-14 font-weight-bold">
                 HEROES OF THE PANDEMIC
               </h5>
               <div class="row">
@@ -1470,7 +1474,7 @@
                   </div>
                 </div>
               </div>
-              <h5 class="title-page font-weight-bold">
+              <h5 class="title-page font-size-14 font-weight-bold">
                 CULTURE & TRAVEL
               </h5>
               <div class="row">
@@ -1565,7 +1569,7 @@
                 </div>
               </div>
               <div class="row">
-                <h5 class="title-page font-weight-bold">
+                <h5 class="title-page font-weight-bold font-size-14">
                   MORE STORIES
                 </h5>
                 <div class="media more-stories">
@@ -1577,12 +1581,12 @@
                   /></a>
                   <div class="media-body">
                     <a href="#">
-                      <h5 class="mt-0">
+                      <h5 class="h6 mt-0 font-weight-bold text-black">
                         U.S. Coronavirus Map Update: Where COVID-19 Cases Are
                         Located
                       </h5></a
                     >
-                    <p>
+                    <p class="font-size-14">
                       The map tracks where the coronavirus outbreak is spreading
                       across the U.S., now the epicenter of the global pandemic.
                     </p>
@@ -1597,12 +1601,12 @@
                   /></a>
                   <div class="media-body">
                     <a href="#">
-                      <h5 class="mt-0">
+                      <h5 class="h6 mt-0 font-weight-bold text-black">
                         Joe Biden vs Donald Trump: What the Latest Polls Are
                         Saying
                       </h5></a
                     >
-                    <p>
+                    <p class="font-size-14">
                       Recent poll results show Biden holding leads over Trump in
                       both national and statewide polling in key states.
                     </p>
@@ -1617,12 +1621,12 @@
                   /></a>
                   <div class="media-body">
                     <a href="#">
-                      <h5 class="mt-0">
+                      <h5 class="h6 mt-0 font-weight-bold text-black">
                         WHO Director Thanks World Leaders for Support After
                         Trump Funding Threat
                       </h5></a
                     >
-                    <p>
+                    <p class="font-size-14">
                       Trump accused the WHO of being too "China centric" on
                       Tuesday, and suggested the organization had mishandled the
                       COVID-19 outbreak.
@@ -1638,12 +1642,12 @@
                   /></a>
                   <div class="media-body">
                     <a href="#">
-                      <h5 class="mt-0">
+                      <h5 class="h6 mt-0 font-weight-bold text-black">
                         CDC Hydroxychloroquine Prescription Advice Removed From
                         Website
                       </h5></a
                     >
-                    <p>
+                    <p class="font-size-14">
                       Hydroxychloroquine and its analog chloroquine has been
                       used experimentally on coronavirus patients as there is
                       currently no specific drug or vaccine against the disease.
@@ -1659,12 +1663,12 @@
                   /></a>
                   <div class="media-body">
                     <a href="#">
-                      <h5 class="mt-0">
+                      <h5 class="h6 mt-0 font-weight-bold text-black">
                         Over 300,000 Have Recovered From Coronavirus, Per Johns
                         Hopkins University
                       </h5></a
                     >
-                    <p>
+                    <p class="font-size-14">
                       If a convalescent plasma program proves to be a successful
                       treatment, more people recovering could potentially lead
                       to even more people recovering.
@@ -1680,12 +1684,12 @@
                   /></a>
                   <div class="media-body">
                     <a href="">
-                      <h5 class="mt-0">
+                      <h5 class="h6 mt-0 font-weight-bold text-black">
                         Certain Areas Hit Hard by Coronavirus Will Take Longer
                         to Reopen
                       </h5></a
                     >
-                    <p>
+                    <p class="font-size-14">
                       "My expectation is that we'll be opening it up based upon
                       medical conditions," Mnuchin said. "So, obviously we'd
                       like to open up as much GDP as we can, but my expectation
@@ -1703,12 +1707,12 @@
                   /></a>
                   <div class="media-body">
                     <a href="">
-                      <h5 class="mt-0">
+                      <h5 class="h6 mt-0 font-weight-bold text-black">
                         Blood of Americans Sought to Reveal True Scale of
                         COVID-19 Epidemic
                       </h5></a
                     >
-                    <p>
+                    <p class="font-size-14">
                       Experts hope antibody tests will bring mild and
                       asymptomatic coronavirus cases into data compiled on the
                       disease.
@@ -1724,12 +1728,12 @@
                   /></a>
                   <div class="media-body">
                     <a href="">
-                      <h5 class="mt-0">
+                      <h5 class="h6 mt-0 font-weight-bold text-black">
                         Here's Who Could Get More Money Under Congress' New $250
                         Billion Aid Plan for Small Businesses
                       </h5></a
                     >
-                    <p>
+                    <p class="font-size-14">
                       Farmers, nonprofits and minority- and veteran-owned
                       businesses could be among the beneficiaries—but getting
                       the hundreds of billions of dollars in the hands of the
@@ -1746,12 +1750,12 @@
                   /></a>
                   <div class="media-body">
                     <a href="">
-                      <h5 class="mt-0">
+                      <h5 class="h6 mt-0 font-weight-bold text-black">
                         Where to Find Financial Help Before Stimulus Checks
                         Deposit
                       </h5></a
                     >
-                    <p>
+                    <p class="font-size-14">
                       Here is a list of community, nonprofit, and government
                       initiatives available to people in need during the
                       pandemic.
@@ -1767,12 +1771,12 @@
                   /></a>
                   <div class="media-body">
                     <a href="">
-                      <h5 class="mt-0">
+                      <h5 class="h6 mt-0 font-weight-bold text-black">
                         Americans May Be Missing Out On $8.5 Billion In March
                         Madness Bets
                       </h5></a
                     >
-                    <p>
+                    <p class="font-size-14">
                       College hoops' Big Dance is just one of dozens of major
                       sporting events that have been postponed or cancelled due
                       to the coronavirus in 2020. From the Kentucky Derby to
@@ -1791,12 +1795,12 @@
                   /></a>
                   <div class="media-body">
                     <a href="">
-                      <h5 class="mt-0">
+                      <h5 class="h6 mt-0 font-weight-bold text-black">
                         Backlash After Wisconsin Voters Forced to Risk Catching
                         COVID-19 to Vote
                       </h5></a
                     >
-                    <p>
+                    <p class="font-size-14">
                       "I'm surprised Wisconsin took this risk, knowing they
                       don't have to," said former GOP Rep. Charlie Dent.
                     </p>
@@ -1811,12 +1815,12 @@
                   /></a>
                   <div class="media-body">
                     <a href="">
-                      <h5 class="mt-0">
+                      <h5 class="h6 mt-0 font-weight-bold text-black">
                         Hundreds of Florida Residents Line Up for Unemployment
                         Benefits
                       </h5></a
                     >
-                    <p>
+                    <p class="font-size-14">
                       People risked coronavirus infection to apply in-person.
                     </p>
                   </div>
@@ -1824,7 +1828,7 @@
               </div>
             </div>
             <div class="col-lg-3 col-md-12 column3">
-              <h5 class="title-page font-weight-bold">OPNION</h5>
+              <h5 class="title-page font-size-14 font-weight-bold">OPNION</h5>
               <div class="media opinion-item-1">
                 <a href="">
                   <img
@@ -1901,7 +1905,9 @@
                   </p>
                 </div>
               </div>
-              <h5 class="title-page font-weight-bold">THE DEBATE</h5>
+              <h5 class="title-page font-weight-bold font-size-14">
+                THE DEBATE
+              </h5>
               <div class="media opinion-item-2">
                 <img
                   class="d-flex mr-3"
@@ -1963,7 +1969,9 @@
                     class="d-flex mr-3"
                 /></a>
               </div>
-              <h5 class="title-page font-weight-bold">LATEST NEWS</h5>
+              <h5 class="title-page font-weight-bold font-size-14">
+                LATEST NEWS
+              </h5>
               <div class="media opinion-item-3">
                 <a href="">
                   <img
